# wb-products

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
wb_products/: manage.py
wb_products/app/: admin.py  models.py  parsers.py  serializers.py  tasks.py  views.py
wb_products/wb_products/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
